dx/force-app/main/default/objects/ltng_M2M_Relationship__c/ltng_M2M_Relationship__c.object-meta.xml
<CustomObject>
    <description>A description of any Many to Many relationship

For example, Account can have many Contacts - just as Contacts can have relationships in many Accounts.
Both of these are linked through a common object: AccountContactRelation (with an Account and Contact lookup)
to link the two together.

This Object would describe that relation, with the object on the left (ex: Account)
the object on the right (ex: Contact)
and the junction object - that relates the two.</description>
    <label>M2M Relationship</label>
    <nameField>
        <displayFormat>MMR-{00000}</displayFormat>
        <label>M2M Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>M2M Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>