dx/force-app/main/default/objects/ltng_M2M_Relationship__c/fields/JunctionLeftObjectRelationshipField__c.field-meta.xml
<CustomField>
    <fullName>JunctionLeftObjectRelationshipField__c</fullName>
    <inlineHelpText>API Name of the field used to relate the Junction Object to the Left Object</inlineHelpText>
    <label>Junction Left Object Relationship Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>