dx/force-app/main/default/objects/ltng_M2M_Relationship__c/fields/JunctionObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>JunctionObjectAPIName__c</fullName>
    <inlineHelpText>The Junction object between the two objects.</inlineHelpText>
    <label>Junction Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>