dx/force-app/main/default/objects/ltng_M2M_Relationship__c/fields/JunctionObjectSpecificFields__c.field-meta.xml
<CustomField>
    <fullName>JunctionObjectSpecificFields__c</fullName>
    <inlineHelpText>The individual fields to show if the compact layout is not shown.
(Note, the record is not shown if not using compact layout and no fields selected)</inlineHelpText>
    <label>Junction Object Specific Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>