dx/force-app/main/default/objects/ltng_M2M_Relationship__c/fields/JunctionObjectUsesCompactLayout__c.field-meta.xml
<CustomField>
    <fullName>JunctionObjectUsesCompactLayout__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked and looking at the &quot;Junction Object&quot; in the relationship, then the compact layout is shown.</inlineHelpText>
    <label>Junction Object Uses Compact Layout}</label>
    <type>Checkbox</type>
</CustomField>