dx/force-app/main/default/objects/ltng_M2M_Relationship__c/fields/JunctionRightObjectRelationshipField__c.field-meta.xml
<CustomField>
    <fullName>JunctionRightObjectRelationshipField__c</fullName>
    <inlineHelpText>API Name of the field used to relate the Junction Object to the Right Object</inlineHelpText>
    <label>Junction Right Object Relationship Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>