dx/force-app/main/default/objects/ltng_M2M_Relationship__c/fields/LeftObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>LeftObjectAPIName__c</fullName>
    <inlineHelpText>The API Name of an object in a many to many relationship</inlineHelpText>
    <label>Left Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>