dx/force-app/main/default/objects/ltng_M2M_Relationship__c/fields/LeftObjectUsesCompactLayout__c.field-meta.xml
<CustomField>
    <fullName>LeftObjectUsesCompactLayout__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked and looking at the &quot;Left Object&quot; in the relationship, then the compact layout is shown.</inlineHelpText>
    <label>Left Object Uses Compact Layout</label>
    <type>Checkbox</type>
</CustomField>