dx/force-app/main/default/objects/ltng_M2M_Relationship__c/fields/RightObjectUsesCompactLayout__c.field-meta.xml
<CustomField>
    <fullName>RightObjectUsesCompactLayout__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked and looking at the &quot;Right Object&quot; in the relationship, then the compact layout is shown.</inlineHelpText>
    <label>Right Object Uses Compact Layout</label>
    <type>Checkbox</type>
</CustomField>