dx/force-app/main/default/objects/ltng_M2M_Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LeftObjectAPIName__c</columns>
    <columns>JunctionObjectAPIName__c</columns>
    <columns>RightObjectAPIName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>